
* Added ``226 IM Used`` status code to ``paste.wsgiwrappers``

* In ``paste.fixture.TestApp`` treat ``<image type="image">`` the same
  as a submit button.

* Use ``OpenSSL.tsafe.Connection`` for https with
  ``paste.httpserver``, avoiding some possible errors (``sslv3 alert
  bad record mac``).

* Fix small issue with ``paste.cgiapp`` and mod_wsgi.

1.5.1
-----

* Make ``paste.cascade`` more tolerant of a missing or invalid
  Content-Length.

1.5
---

* Fixed memory leak with ``paste.registry`` not properly removing
  all references to registered objects should register be called
  multiple times during a single context for a StackedObjectProxy.

* ``paste.httpheaders.CONTENT_RANGE`` returns ``bytes
  START-END/LENGTH`` instead of just ``START-END/LENGTH``

* In ``paste.fixture.TestApp`` set ``CONTENT_TYPE`` to
  ``'application/x-www-form-urlencoded'`` whenever there are
  parameters (and no other content type was provided).

* In ``paste.session``, when cleaning files ignore files that aren't
  session files.

* ``paste.httpexceptions.HTTPExceptionHandler`` will no longer catch
  exceptions raised during the app_iter iteration.

* ``paste.cascade.Cascade`` copies ``wsgi.input`` when cascading, so
  that one of the applications cannot read the input and leave a later
  application blocked when it tries to read the input.

* Fix assigning to ``WSGIResponse.charset`` breaking the content-type.

* SMTP authentication is supported for the exception handler.  You may
  now set ``smtp_username``, ``smtp_password`` and ``smtp_use_tls`` to
  control this behavior.  From pthy.

1.4.2
-----

* Remove FreeBSD threadpool condition in paste.httpserver (which was
  also breaking code for Windows users).

* Fix problem with ``paste.wsgilib.intercept_output`` and passing up
  exceptions.

1.4.1
-----

* Allow customization of the ``paste.config.ConfigMiddleware`` environ
  key.

* Added a ``current`` method (an alias of ``current_conf``) to
  ``paste.config.DispatchingConfig``.
